# lsh-qudit

./: README.md  diag_qiskit_vis.ipynb  full_circuit.ipynb  full_circuit_alltoall.ipynb  full_circuit_qubit.ipynb  pyproject.toml  run_simulation.ipynb
lsh_qudit/: agl.py  constants.py  diag_terms.py  gates.py  gray_synth.py  hamiltonian.py  hamiltonian_alltoall.py  hamiltonian_nn.py  hamiltonian_static.py  hopping_terms.py  layout.py  matrices.py  parity_network.py  postcompiler.py  precompiler.py  qutrit_gates.py  set_rccx_inverse.py  transpiler.py  trotter.py  trotter_alltoall.py  trotter_nn.py  utils.py  validator.py  validator_jax.py
