[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsh-qudit"
version = "0.1.0"
authors = []
description = "SU(2) LSH simulation with qubits and qudits."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "qiskit"
]
